--- a/index.html
+++ b/index.html
@@ -19,6 +19,17 @@
         <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
         <div class="title">spiderman for web</div>
+        <div>How to play:
+        <ol>
+          <li>W: Up</li>
+          <li>A: Left</li>
+          <li>S: Down</li>
+          <li>D: Right</li>
+          <li>Shift: Sprint</li>
+          <li>Left Click: Web Shoot</li>
+          <li>Space Bar: Jump</li>
+          <li>P: Pause Game</li>
+          </ol></div>
       </div>
     </div>
   </body>
